# PhotoGeoView

./: .biomeignore  .cursorrules  .dockerignore  .gitattributes  .gitignore  .nycrc.json  .pnpmrc  .pre-commit-config.yaml  =0.2.4  BREADCRUMB_INTEGRATION_FIX.md  CHANGELOG.md  CI_SYSTEM_UPDATE.md  CODEBASE_ANALYSIS_jp.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  EXIF_PANEL_SIMPLIFICATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MIGRATION_QUICK_START_jp.md  MULTIPLATFORM_SUPPORT.md  Makefile  QUALITY_CHECKLIST.md  QUALITY_ROADMAP.md  README.md  THUMBNAIL_PERFORMANCE_OPTIMIZATION_SUMMARY.md  THUMBNAIL_VERTICAL_SCROLL_SUMMARY.md  WORKFLOW_SIMPLIFICATION.md  analyze_workflow.py  biome.json  ci.py  ci_config_autofix.json  claude.md  components.json  create_test_file.py  debug_checkers.py  debug_comprehensive_fix.py  debug_exif_detailed.py  debug_exif_issue.py  debug_final_verification.py  (+78 more)
.claude/: settings.local.json
config/: app_config.json  application_state.json  config.json  config.json.backup  copilot_config.json  cursor_config.json  error_monitoring_config.json  logging.json  logging_config.json  migration_report.json  qt_theme_definitions.json  qt_theme_settings.json  qt_themes.json  theme_config.json  theme_styles.json  theme_styles.json.backup_6percent  theme_styles.json.backup_subtle_zebra  theme_styles_improved.json  theme_styles_original_backup.json
demo_data/: 16_themes_complete.json  data_migration_report.json  exif_data.json  image_cache.json  migrated_cs4_coding_exif_cache_imagemetadata.json  migrated_cursor_bld_image_cache_imagemetadata.json  migrated_cursor_bld_theme_data_themeconfiguration.json  migrated_legacy_database_imagemetadata.json  themes.json
dev_scripts/: README.md  ai_integration_test_suite.py  basic_tests.py  create_test_file.py  debug_checkers.py  debug_comprehensive_fix.py  debug_exif_detailed.py  debug_exif_issue.py  debug_final_verification.py  debug_fixes.py  debug_fixes_advanced.py  debug_theme_stylesheet.py  debug_thumbnail_loading.py  demo_theme_management.py  fix_exif_display.py  fix_segfault.py  fix_theme_background_issue.py  fix_theme_stylesheet_generation.py  fix_ui_theme_integration.py  minimal_test.py  performance_benchmarks.py  run_ci_safe.py  run_file_list_display_tests.py  run_integration_tests.py  run_qt_theme_breadcrumb_integration_tests.py  simple_exif_test.py  simple_thumbnail_test.py  start_production.py  test_breadcrumb_enhancement.py  test_breadcrumb_functionality.py  test_breadcrumb_integration.py  test_breadcrumb_simple.py  test_exif_display.py  test_exif_display_fix.py  test_exif_ui.py  test_file_system_watcher_integration.py  test_final_integration.py  test_folder_navigator_integration.py  test_logging_integration.py  test_security_issues.py  (+8 more)
docs/: ANALYSIS_INDEX_jp.md  CI_INTEGRATION.md  MANUAL_TEST_CHECKLIST.md  MODERNIZATION_PLAN.md  MODERNIZATION_QUICKSTART.md  PGV_FileManagements.md  Phase4_Completion_Report.md  Phase4_Qt_Theme_Manager_Integration_Report.md  PhotoGeoView_ProjectSpecification.md  QUALITY_CHECKLIST.md  QUALITY_ROADMAP.md  README.md  RELEASE_WORKFLOW_STATUS.md  TAURI_MIGRATION_PLAN.md  TECH_STACK_ALTERNATIVES.md  THUMBNAIL_QUALITY_IMPROVEMENT.md  TROUBLESHOOTING.md  Test_Coverage_Merge_Plan.md  Theme_Implementation_Details.md  Theme_Reusability_Guide.md  ai_quality_integration_guide.md  big_module_reseach.txt  branch_review_summary.md  feat_plan.md  feat_plan2.1.0.md  how CS4Coding_README.md  integration_plan.md  tasks.md  v2.1.0_implementation_plan.md  v2.1.0_tasklist.md
e2e/: app.spec.ts
examples/: README.md  demo_config_manager.py  demo_data_validation_migration.py  demo_image_processor.py  demo_kiro_components.py  demo_kiro_integration.py  demo_theme_selector.py
logs/: debug.log.1  info.log.1
multiplatform-summary/: summary.md
playwright-report/: index.html
reports/: .gitkeep  integration_report_20250726_111846.json  integration_report_20250726_111846.md  latest_integration_report.md  quality_report.md  requirements_validation.md
scripts/: README.md  build-appimage.mjs  build-mac.mjs  build_package.py  build_with_ci.py  ci.py  clean.js  cleanup-photogeoview.ps1  debug-e2e.js  dev-debug.sh  disable_ci_hooks.sh  enable_ci_hooks.sh  fix_typing_imports.py  generate-icons.mjs  instrument-out.js  logs-clean.sh  logs-view.sh  logs-watch.sh  merge-report.js  pre_commit.py  run_ci_checks.py  setup_ci_integration.py  setup_platform.py  test_ci_loop_fix.py  test_ci_loop_fix_v2.py  validate_ci_integration.py
src/: App.js  App.tsx  __init__.py  index.css  main.js  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: exif.rs  mod.rs  thumbnail.rs
src-tauri/src/models/: mod.rs  photo.rs
state/: app_state.backup  app_state.json
tests/: INTEGRATION_TESTS_SUMMARY.md  Manual_Test_GuideLine.md  README.md  README_file_list_display_tests.md  __init__.py  ai_integration_test_suite.py  basic_tests.py  check_duplicate.py  debug_test.py  debug_test_no_gps.py  imagetests  import_test.py  performance_benchmarks.py  qt-image-test.py  real_file_test.py  run_all_tests.py  run_file_list_display_tests.py  run_integration_tests.py  run_qt_theme_breadcrumb_integration_tests.py  run_tests.py  setup.ts  system_test.py  test_async_file_discovery.py  test_breadcrumb_bar.py  test_breadcrumb_bar_simple.py  test_ci_integration.py  test_config.json  test_config_manager.py  test_consolidated_theme.py  test_cross_platform_compatibility.py  test_custom_theme_functionality.py  test_custom_theme_integration.py  test_data_migration.py  test_data_validation.py  test_error_handling.py  test_error_handling_fallback_mechanisms.py  test_exif_core.py  test_exif_detailed.py  test_exif_parser.py  test_exif_reading.py  (+40 more)
tools/: ai_quality_checker.py  ci_integration.py  create_deployment_package.py  generate_integration_report.py  github_actions_ai_analyzer.py  github_actions_ai_analyzer_enhanced.py  perfect_accessibility.py  production_environment_setup.py  production_theme_check.py  qt_style_6percent_zebra.py  (+11 more)
(+470 files in other folders)
