[package]
name = "photogeoview"
version = "3.0.0"
description = "📍 写真の位置情報を地図上に可視化する高速なデスクトップアプリ (v3 Tauri版)"
authors = ["PhotoGeoView Team"]
license = "MIT"
repository = "https://github.com/scottlz0310/PhotoGeoView"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.29"
tauri = { version = "2.10.3", features = ["protocol-asset", "unstable"] }
tauri-plugin-log = "2.8.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-shell = "2.3.5"

# エラーハンドリング
thiserror = "2.0.18"
anyhow = "1.0.102"

# 画像処理
image = "0.25.9"
kamadak-exif = "0.6.1"
base64 = "0.22.1"

# 並列処理
rayon = "1.11.0"

# 非同期処理
tokio = { version = "1.49.0", features = ["full"] }

# 日時処理
chrono = "0.4.44"
sha2 = "0.10.9"
hex = "0.4.3"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = "0.3.22"
